p3/conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: argocd.awesome.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
